; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_add_mem.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_add_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"buf %p len %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @net_buf_simple_add_mem(%struct.net_buf_simple* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.net_buf_simple*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.net_buf_simple*, %struct.net_buf_simple** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = call i32 @NET_BUF_SIMPLE_DBG(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), %struct.net_buf_simple* %7, i64 %8)
  %10 = load %struct.net_buf_simple*, %struct.net_buf_simple** %4, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @net_buf_simple_add(%struct.net_buf_simple* %10, i64 %11)
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i8* @memcpy(i32 %12, i8* %13, i64 %14)
  ret i8* %15
}

declare dso_local i32 @NET_BUF_SIMPLE_DBG(i8*, %struct.net_buf_simple*, i64) #1

declare dso_local i8* @memcpy(i32, i8*, i64) #1

declare dso_local i32 @net_buf_simple_add(%struct.net_buf_simple*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
